--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -123,6 +123,11 @@ Browse example stories now by navigating to them in the sidebar.
 View their code in the `stories` directory to learn how they work.
 We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
 
+<h1 className="subheading">Notes</h1>
+<div className="link-list">
+  <a className="link-item" target="_blank" href="https://coolors.co/palettes/trending" > Trending Color palettes </a>
+</div>
+
 <div className="subheading">Configure</div>
 
 <div className="link-list">
